# khora

./: .gitignore  ActionType.cpp  ActionType.h  AllArmies.cpp  AllArmies.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CityTemplate.cpp  CityTemplate.h  Config.h.in  Deck.h  DiscoveryType.cpp  DiscoveryType.h  DraftManipulator.h  DraftManipulatorConst.h  EventTemplate.cpp  EventTemplate.h  EventsManipulator.cpp  EventsManipulator.h  ExpeditionTemplate.cpp  ExpeditionTemplate.h  GlobalEventStage.h  GlobalEventType.cpp  GlobalEventType.h  GlobalEventsDeck.cpp  GlobalEventsDeck.h  LICENSE  Main.cpp  Observers.h  OrderedByDicesPlayers.cpp  OrderedByDicesPlayers.h  PlayerLogic.cpp  PlayerLogic.h  PlayerPerkAcceptor.cpp  PlayerPerkAcceptor.h  PlayerPerks.cpp  PlayerPerks.h  Players.cpp  Players.h  (+22 more)
Assets/: Assets.cpp  (+14 more)
Editor/: Application.cpp  Application.h  AsyncQueue.cpp  AsyncQueue.h  CMakeLists.txt  Clone.cpp  Clone.h  ConfigEntry.cpp  ConfigEntry.h  DataModel.cpp  DataModel.h  DevLog.md  DirectoryEntry.cpp  DirectoryEntry.h  Entry.cpp  Entry.h  EntryBase.h  EntryPath.cpp  EntryPath.h  EntryType.h  Errors.cpp  Errors.h  Factory.cpp  GeometryEntry.cpp  GeometryEntry.h  GroupEntry.cpp  GroupEntry.h  GuidGen.cpp  IAsyncQueue.h  ICloneEntry.h  IConfigEntry.h  IDataModel.h  IDataModelEditor.cpp  IDataModelEditor.h  IDataModelObserver.cpp  IDataModelObserver.h  IDirectoryEntry.h  IDirectoryObserver.h  IEntry.h  IEntryObserver.h  (+41 more)
Editor/Catalog/Interface/: EntryPath.cpp  EntryPath.h  EntryType.h  ICloneEntry.h  IConfigEntry.h  IDirectoryEntry.h  IEntry.h  IGeometryEntry.h  IGroupEntry.h  ILocalizedEntry.h  IMaterialEntry.h  IPackageEntry.h  IProxyEntry.h  ISharedEntry.h  ITextEntry.h  ITransformEntry.h
Editor/Catalog/Module/: Clone.cpp  Clone.h  ConfigEntry.cpp  ConfigEntry.h  DirectoryEntry.cpp  DirectoryEntry.h  EntryBase.h  GeometryEntry.cpp  GeometryEntry.h  GroupEntry.cpp  GroupEntry.h  LocalizedEntry.cpp  LocalizedEntry.h  MaterialEntry.cpp  MaterialEntry.h  ObjectEntry.h  ProxyEntry.h  TextEntry.cpp  TextEntry.h  TransformEntry.h  TransformPackageEntry.cpp  TransformProxyEntry.cpp
Editor/DataModel/: CompilationState.h  DataModel.cpp  DataModelState.cpp  DataModelState.h  ICompilationState.h  IDataModelState.h
Editor/DataModel/Processors/: AddLanguageMessageProcessor.cpp  AddLanguageMessageProcessor.h  CompileSceneProcessor.cpp  CompileSceneProcessor.h  CopyEntryMessageProcessor.cpp  CopyEntryMessageProcessor.h  CopyNodeMessageProcessor.cpp  CopyNodeMessageProcessor.h  CreateNodeMessageProcessor.cpp  CreateNodeMessageProcessor.h  ExportToFileMessageProcessor.cpp  ExportToFileMessageProcessor.h  FontCompiledMessageProcessor.cpp  FontCompiledMessageProcessor.h  FontsCompilationJobsCompleteMessageProcessor.cpp  FontsCompilationJobsCompleteMessageProcessor.h  ImportFileMessageProcessor.cpp  ImportFileMessageProcessor.h  ImportFromFileMessageProcessor.cpp  ImportFromFileMessageProcessor.h  MoveEntryMessageProcessor.cpp  MoveEntryMessageProcessor.h  RemoveEntryMessageProcessor.cpp  RemoveEntryMessageProcessor.h  RemoveLanguageMessageProcessor.cpp  RemoveLanguageMessageProcessor.h  RenameEntryMessageProcessor.cpp  RenameEntryMessageProcessor.h  RenameLanguageMessageProcessor.cpp  RenameLanguageMessageProcessor.h  RequestSuggestedChildrenMessageProcessor.cpp  RequestSuggestedChildrenMessageProcessor.h  ResetModelMessageProcessor.cpp  ResetModelMessageProcessor.h  SaveToFileMessageProcessor.cpp  SaveToFileMessageProcessor.h  SelectEntryMessageProcessor.cpp  SelectEntryMessageProcessor.h  SetActiveLanguageMessageProcessor.cpp  SetActiveLanguageMessageProcessor.h  (+2 more)
Editor/Fonts/: Interface.h
Editor/Fonts/Interface/: ISystemFonts.h
Editor/Fonts/Module/: ISystemFontsPrivate.h  SystemFonts.cpp  SystemFonts.h
Editor/Fundamental/: Interface.h
Editor/Fundamental/Interface/: IAggregatedProcessor.h  IAsyncQueue.h  IAsyncTask.h  IError.h  IMessage.h  IMessageOutput.h  IMessageProcessor.h  IObserver.h  IReferenced.h  IToString.h  LongOperation.h  Result.h
Editor/Fundamental/Module/: AsyncQueue.cpp  AsyncQueue.h  Errors.cpp  Errors.h  Factory.cpp  LongOperationScope.h  MessageBase.h  MessageProcessor.cpp  MessageProcessor.h  Observer.cpp  Observer.h  Referenced.h
Editor/Messages/: ActiveLanguageChangedMessage.h  AddLanguageMessage.h  CompileFontMessage.h  CompileMessage.h  CompileSceneMessage.h  ConfigChangedMessage.h  CopyEntryMessage.cpp  CopyEntryMessage.h  CopyNodeMessage.h  CreateNodeMessage.h  EntryAddedMessage.h  EntryRemovedMessage.h  EntrySelectedMessage.h  ExportToFileMessage.h  ImportFileMessage.h  LanguageAddedMessage.h  LanguageRemovedMessage.h  Messages.h  ModelResetMessage.h  MoveEntryMessage.h  RefreshFontsMessage.h  RemoveEntryMessage.h  RemoveLanguageMessage.h  RenameEntryMessage.h  RequestSuggestedChildrenMessage.h  ResetModelMessage.h  SaveToFileMessage.h  SceneCompeledMessage.h  SelectEntryMessage.h  SetActiveLanguageMessage.h  SuggestedChildrenMessage.h
Editor/Serializer/Interface/: IPackage.h  IPackageArrayReader.h  IPackageArrayWriter.h  IPackageReader.h  IPackageWriter.h  ISerializable.h
Editor/Serializer/Module/: Serializable.cpp  Serializer.cpp  Serializer.h
Editor/State/: Interface.h
Editor/State/Interface/: ICompilationState.h  IDataModel.h  IDataModelObserver.h  IDataModelState.h
Editor/State/Module/: CompilationState.cpp  CompilationState.h  DataModel.cpp  DataModelState.cpp  DataModelState.h  Processors.h
Editor/UI/: EditorMainWindow.cpp  EditorMainWindow.h  Processors.h  TextEnterDialog.cpp  TextEnterDialog.h  TextPanel.cpp  TextPanel.h  TransformPanel.cpp  TransformPanel.h  UICommon.h  ViewerState.h  ViewerWindow.cpp  ViewerWindow.h  vsgEditor.cpp  vsgEditor.h  vsgEditorUi.fbp
Editor/UI/Processors/: ActiveLanguageChangedMessageProcessor.cpp  ActiveLanguageChangedMessageProcessor.h  BulkOperationEndedMessageProcessor.cpp  BulkOperationEndedMessageProcessor.h  BulkOperationStartedMessageProcessor.cpp  BulkOperationStartedMessageProcessor.h  CompileMessageProcessor.cpp  CompileMessageProcessor.h  ConfigChangedMessageProcessor.cpp  (+29 more)
(+223 files in other folders)
